--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <p class="centered">daniel.sinclair5@gmail.com</p>
     <p class="centered">+(44) 7884671420</p>
     <p class="centered">
-      <a href="https://danielsinclair.com" target="_blank">danielsinclair.com</a>
+      <a href="https://danielsinclair.design" target="_blank">danielsinclair.design</a>
     </p>
     <p class="centered">
       <a href="https://www.instagram.com/sinc_ed?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">@Sinc_ed</a>
@@ -162,7 +162,7 @@
     <p class="centered">daniel.sinclair5@gmail.com</p>
     <p class="centered">+(44) 7884671420</p>
     <p class="centered">
-      <a href="https://danielsinclair.com" target="_blank">danielsinclair.com</a>
+      <a href="https://danielsinclair.design" target="_blank">danielsinclair.design</a>
     </p>
     <p class="centered">
       <a href="https://www.instagram.com/sinc_ed?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">@Sinc_ed</a>
