--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <a href="https://www.danielsinclair.design/" target="_blank">danielsinclair.design</a>
     </p>
     <p class="centered">
-      <a href="https://www.instagram.com/sinc_ed?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">@Sinc_ed</a>
+      <a href="https://www.instagram.com/sinc_ed?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">@sinc_ed</a>
     </p>
 
     <h2>A better look at my publications</h2>
@@ -165,7 +165,7 @@
       <a href="https://www.danielsinclair.design/" target="_blank">danielsinclair.design</a>
     </p>
     <p class="centered">
-      <a href="https://www.instagram.com/sinc_ed?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">@Sinc_ed</a>
+      <a href="https://www.instagram.com/sinc_ed?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">@sinc_ed</a>
     </p>
 
 </body>
