--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/qeo4rfl.css">
-    <title>Gif Website</title>
+    <title>Panopus Portfolio</title>
     <style>
         body {
             font-family: "sofia-pro", sans-serif;
